# grit

./: .gitignore  DirectionNomenclature.odg  Makefile  Mojavaton.sln  README.md  cogburn.logo.xcf  config.mk  git-setup  id  scanhosts
attic/artemis/: .cproject  .project  Makefile
attic/bson/: bson.vcxproj
attic/bzip2/: .project  bzip2.vcxproj  bzip2.vcxproj.filters
attic/centaur/: Makefile
attic/cppzmq/: Makefile  readme.txt
attic/earlyTests/: DynamixelDriver.cpp  RevolutionTest.cpp  StraightGate.csv
attic/leapMotion/: leapMotion.vcxproj.filters
attic/libjson/: libjson.vcxproj.filters
attic/miniquad/: quad_sub  quad_sub.cpp
attic/walkerReader/: Makefile
centaur/: Makefile  config.mk  context  rules.mk
centaur/HokuyoProvider/: HokuyoProvider.vcxproj  HokuyoProvider.vcxproj.filters  HokuyoProvider_Test.vcxproj  Makefile
centaur/HokuyoRequester/: Makefile
control/: Makefile  config.mk  context
drivers/: Makefile  ReadMeMake.txt  centaur  config.mk  context  go  rules.mk  run
feildpc/: Makefile  config.mk  context
fieldpc/: config.mk  context  rules.mk
gazebo/plug/: CMakeLists.txt  Makefile  controller.cpp  start
haarkit/: READ_THIS_FIRST.txt
libs/: Makefile  readme.txt
pcduino/: Makefile  rules.mk
pre/: Makefile  config.mk  context
setup/: Makefile  README  config.csv  config.csv-local  config.csv-wired  config.csv-wireless  config.csv~  config.h  config.mk  go  servomap.csv  servomap.ods  setup_dev_environment.sh  setup_environment_kinect.sh  setup_environment_packages.sh  setup_kinect_dependencies_all.sh  setup_leap.sh
(+1315 files in other folders)
